# backend/internal/features/posts/transport/http/transport.go
@@ -15,6 +15,7 @@ type PostsHTTPHandler struct {
 
 type PostsService interface {
 	CreatePost(ctx context.Context, post domain.Post) (*domain.Post, error)
+	GetPostByID(ctx context.Context, postID string) (*domain.Post, error)
 }
 
 func NewPostsHandler(postsService PostsService) *PostsHTTPHandler {
@@ -29,6 +30,12 @@ func (h *PostsHTTPHandler) Routes() []server.Route {
 			Method:               http.MethodPost,
 			URL:                  "/posts/create",
 			Handler:              h.CreatePost,
+			AdditionalMiddleware: []middleware.Middleware{middleware.AuthMiddleware()},
+		},
+		{
+			Method:               http.MethodGet,
+			URL:                  "/posts/{PostId}",
+			Handler:              h.GetPostById,
 			AdditionalMiddleware: []middleware.Middleware{middleware.AuthMiddleware()},
 		},
 	}
